acf: Fix up a few spacing issues with flexible components

--- a/assets/sass/acf/_choices.scss
+++ b/assets/sass/acf/_choices.scss
@@ -11,7 +11,7 @@
 .choices__container {
     max-width: 75rem;
     margin: 0 auto;
-    padding: 3rem 0;
+    padding: 4rem 0;
     text-align: center;
 }
 
