--- a/assets/sass/acf/_hero.scss
+++ b/assets/sass/acf/_hero.scss
@@ -7,7 +7,7 @@ section.hero {
     padding: 0;
 
     @include breakpoint(large) {
-        height: 75vh;
+        height: 80vh;
     }
 }
 
